# watcher

./: Cargo.toml  LICENSE  README.md  README.zh-CN.md  build_release.sh
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: PROGRESS.md
examples/: baseline_template.xlsx  watcher.yml
src/: daemon.rs  local_time.rs  logging.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/dict/: mod.rs  paths.rs
src/import/: excel.rs  mod.rs
src/models/: mod.rs
src/monitor/: detailed_fingerprint.rs  dns.rs  fingerprint.rs  mod.rs  ports.rs  scheduler.rs  vuln.rs  web_enum.rs
src/notify/: email.rs  mod.rs
src/report/: mod.rs
