[package]
name = "watcher"
version = "0.1.3"
edition = "2024"
license = "BSD-3-Clause"
description = "Long-running asset monitoring toolkit for DNS records, TCP ports, web services, web paths, URL status, and lightweight exposure checks."

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
dirs = "6"
futures = "0.3"
hickory-resolver = { version = "0.26", default-features = false, features = ["tokio"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "rustls-tls", "smtp-transport"] }
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
umya-spreadsheet = "2.3.3"
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
